@@ -13,8 +13,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -22,7 +22,39 @@
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.2.4</version>
             </plugin>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>thito.nodejfx.UI</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.openjfx</groupId>
+                    <artifactId>javafx-maven-plugin</artifactId>
+                    <version>0.0.6</version>
+                    <configuration>
+                        <options>
+                            <option>--add-opens</option>
+                            <option>javafx.graphics/javafx.scene=ALL-UNNAMED</option>
+                            <option>--add-exports</option>
+                            <option>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>
+                            <option>--add-exports</option>
+                            <option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
+                            <option>--add-exports</option>
+                            <option>javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED</option>
+                            <option>--add-exports</option>
+                            <option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
+                            <option>--add-exports</option>
+                            <option>javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</option>
+                        </options>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
     <dependencies>
         <dependency>
@@ -36,6 +68,26 @@
             <artifactId>jnativehook</artifactId>
             <version>2.1.0</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-base</artifactId>
+            <version>16</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+            <version>16</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>16</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>16</version>
         </dependency>
     </dependencies>
 
